Added new fonts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,3 +62,15 @@
   animation: hero-zoom 1.5s ease-out forwards;
 }
 
+/* @font-face {
+  font-family: 'Odd-Medium';
+  src: url('/fonts/Odd-Medium.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'AlexType-Regular';
+  src: url('/fonts/AlexType-Regular.woff2') format('woff2');
+  font-display: swap;
+} */
+
